# mxl-models

./: mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml
docs/: davis2017.ipynb  ebeling2026.ipynb  elowitz2000_repressilator.ipynb  lam2026.ipynb  lotka_volterra.ipynb  matuszynska2016_npq.ipynb  matuszynska2016_phd.ipynb  matuszynska2019.ipynb  nguyen2026_tomato.ipynb  pfennig2024_synechocystis.ipynb  poolman2000.ipynb  pop_dyn.ipynb  prigogine1968_brusselator.ipynb  saadat2021.ipynb  selkov1968_oscillator.ipynb  trip_dyn.ipynb  yokota1985.ipynb  zaks2012.ipynb  zaks2012_mxlpy_reduced_fig4.executed(1).ipynb  zaks2012_mxlpy_strict_port_and_figures.ipynb  zhu_2009.ipynb
src/mxlmodels/: __init__.py  _names.py  bellasio2019.py  davis2017.py  fuente2024.py  hahn1987.py  johnson2021.py  lam2026.py  lazar1997.py  li2021.py  nguyen2026_tomato.py  salvatori2022.py  zhu2009.py
tests/: test_bellasio_2019.py  test_davis2017.py  test_ebenhoeh2014.py  test_fuente_2024.py  test_hahn1987.py  test_lazar1997.py  test_li_2021.py  test_sir.py  test_sird.py  test_zhu_2009.py
