[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "coverage>=7.6.4",
  "jupyter>=1.1.1",
  "mike>=2.1.3",
  "mkdocs-jupyter>=0.25.1",
  "mkdocs-material>=9.5.42",
  "mkdocs>=1.6.1,<2.0.0",
  "pre-commit>=4.0.1",
  "pyright>=1.1.403",
  "pytest-cov>=5.0.0",
  "pytest>=8.3.3",
  "ruff>=0.15.11",
]

[project]
authors = [{ email = "marvin.vanaalst@gmail.com", name = "Marvin van Aalst" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: OS Independent",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
]
dependencies = ["mxlpy>=0.38.0"]
description = "MxlModels is a Python package of reference mechanistic models."
keywords = ["metabolic", "modelling", "ode"]
license = "MIT"
maintainers = [
  { email = "marvin.vanaalst@gmail.com", name = "Marvin van Aalst" },
]
name = "mxlmodels"
readme = "README.md"
requires-python = ">=3.13"
version = "1.2.0"

[tool.hatchling]
from = "src"
include = ["mxlmodels"]

[tool.pyright]
deprecateTypingAliases = true
exclude = [
  "**/.*",
  "**/__pycache__",
  "**/node_modules",
  ".venv",
  "tests/sbml/assets",
  "tmp",
]
include = ["docs", "src", "tests", 'publication-figures']
pythonVersion = "3.13"
reportMissingModuleSource = "none"
strict = []

[tool.ruff]
indent-width = 4
line-length = 88

[tool.ruff.lint]
fixable = ["ALL"]
ignore = [
  "ANN401",  # any
  "C901",    # too complex
  "COM812",  # missing trailing comma  # "D", # all of documentation
  "D105",    # magic methods
  "D203",    # blank line before docstring
  "D213",    # multi-line summary first line
  "D400",    # first line should end with period
  "D401",    # first line should be in imperative mood
  "E501",    # line-too-long
  "ERA001",  # commented-out code
  "FIX001",  # line contains FIXME
  "ISC001",  # single line implicit string concat
  "N806",    # non-lowercase variable
  "N818",    # Exception should end in "Error"
  "PD010",   # pivot table
  "PGH003",  # specific rule type ignore
  "PLR0911", # too many statements
  "PLR0912", # too many branches
  "PLR0913", # max num of arguments
  "PLR0915", # too many lines
  "PT011",   # pytest.raises is too broad
  "RUF022",  # unsorted all
  "S110",    # try-except-pass
  "S301",    # pickle usage
  "TC006",   # cast("type")
  "TD001",   # invalid todo tag
  "TD002",   # missing todo author
  "TD003",   # missing todo link
  "TD004",   # missing todo version
  "TD005",   # missing todo date
  "TRY003",  # raise vanilla args
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
  "D",    # all of documentation
  "T201", # print statements
]
"tests/*" = [
  "D",       # all of documentation
  "PD901",   # "df" name
  "PLR2004", # magic comparisons
  "S101",    # assert
  "SLF",
]
"tmp/*" = [
  "D",    # all of documentation
  "I001", # unsorted imports
  "N",    # all of naming
  "S101", # assert
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.tomlsort]
spaces_before_inline_comment = 2
spaces_indent_inline_array = 2
trailing_comma_inline_array = true

[tool.uv]
package = true
exclude-newer = "3 days"

[tool.uv.sources]
mxlmodels = { workspace = true }
